--- a/package.json
+++ b/package.json
@@ -2,13 +2,9 @@
   "name": "franqopenbanking",
   "version": "1.0.0",
   "description": "FranqOpenBanking",
-  "main": "index.js",
-  "compilerOptions": {
-    "baseUrl": "./src"
-  },
   "scripts": {
-    "start": "webpack-dev-server --mode development",
-    "build": "webpack --mode production",
+    "devbuild": "webpack --mode development --config webpack.config.js ",
+    "start": "webpack serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,18 +18,32 @@
     "url": "https://github.com/drexman/FranqOpenBanking/issues"
   },
   "homepage": "https://github.com/drexman/FranqOpenBanking#readme",
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
+    "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.3",
     "babel-loader": "^9.2.1",
     "html-webpack-plugin": "^5.6.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0"
+  },
+  "dependencies": {
+    "@babel/preset-typescript": "^7.26.0",
+    "@chakra-ui/react": "2",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "axios": "^1.7.9",
+    "formik": "^2.4.6",
+    "framer-motion": "^11.18.1",
+    "md5-hash": "^1.0.1",
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^7.1.3",
+    "styled-components": "^6.1.14",
+    "yup": "^1.6.1"
   }
 }
