--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "FranqOpenBanking",
   "scripts": {
-    "devbuild": "webpack --mode development --config webpack.config.js ",
+    "build": "webpack --mode development --config webpack.config.js ",
     "start": "webpack serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
